--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
+body {
+  background-color: #edeff0;
+}
+
 .top {
   overflow: auto;
   margin-left: 20px;
   margin-right: 20px;
+  border-bottom: solid 2px darkgrey;
+  margin-bottom: 40px;
 }
 
 .top h1 {
@@ -28,10 +34,136 @@ nav li:not(:last-child) {
   padding-right: 20px;
 }
 
-nav p {
-  display: inline;
-  margin-bottom: 20px;
-}
 nav li:first-child {
   margin-bottom: 10px;
+}
+
+.content img {
+  width: 25px;
+}
+
+.top-left {
+  float: left;
+  width: 47.5%;
+  border: 2px solid;
+  border-radius: 5px;;
+  margin-right:25px;
+  margin-left: 25px;
+  margin-bottom: 50px;
+}
+
+.top-right {
+  float: left;
+  width: 47.5%;
+
+}
+
+.bottom-left {
+  float: left;
+  width: 47.5%;
+  margin-right:25px;
+  margin-left: 25px;
+}
+
+.bottom-right {
+  float: left;
+  width: 47.5%;
+}
+
+.content div:nth-child(2n+1) {
+  clear: both;
+}
+
+.head {
+  height: 30px;
+  padding: 20px;
+  font-size: 25px;
+  background-color: #249675;
+}
+
+.head-left {
+  float:left;
+}
+
+.head-left p {
+  display: inline;
+  margin-left: 20px;
+  line-height: 20px;
+
+}
+
+.head-right {
+  font-size: 20px;
+  float: right;
+  margin-top: 0px;
+}
+
+.foot {
+  padding-left: 30px;
+}
+
+.foot-buttons-left {
+  float: left;
+  margin-left: -40px;
+  margin-bottom: -15px;;
+  margin-top: 40px;
+}
+
+.foot-buttons-left li{
+  list-style: none;
+  float: left;
+  padding: 8px;
+  border: solid grey 1px;
+  border-radius: 20px;
+}
+
+.foot-buttons-left li:last-child {
+  margin-left: 8px;
+}
+
+.foot-buttons-right {
+  float: right;
+  margin-top: -40px;
+  margin-right: 20px;
+}
+
+.right-head {
+  height: 30px;
+  padding: 20px;
+  font-size: 25px;
+  background-color: #f291af;
+}
+
+.bottom-left-head {
+  height: 30px;
+  padding: 20px;
+  font-size: 25px;
+  background-color:  #828ac9;
+}
+
+
+.format {
+  float: left;
+  width: 47.5%;
+  border: 2px #edeff0 solid;
+  border-radius: 10px;;
+  margin-right:15px;
+  margin-left: 15px;
+  margin-bottom: 50px;
+  background-color: white;
+}
+
+.dot {
+  color: white;
+}
+
+img.star-button {
+  width: 34px;
+  margin-bottom: 20px;
+  border: solid grey 3px;
+  border-radius: 100%;
+}
+
+img.play-button {
+  width: 120px;
 }
